# fish-db

./: CMakeLists.txt  READMD.md  README.md
data/: rootable.dump
doc/: README
src/: CMakeLists.txt
src/core/: .fish_db_impl.cpp.swp  fish_db_impl.cpp  fish_db_impl.h  iri_index.hpp  iri_index_test.cpp  iri_type.cpp  iri_type.h  makefile  meta_iri_index.hpp  triple.cpp  triple.h
src/db/: block.cpp  block.h  block_data_seeker.cpp  block_data_seeker.h  block_index.cpp  block_index.h  block_metadata.h  root_table.cpp  root_table.h
src/include/: fish_db.h
src/network/: asio_generic_server.hpp  fish_kg_server.hpp  makefile  message.hpp  query_client.cpp  query_handler.hpp  query_server.cpp
src/query/: .query_executor.cpp.swp  .triple_query.cpp.swp  .triple_query.h.swp  query_executor.cpp  query_executor.h  triple_query.cpp  triple_query.h  triple_type.hpp
src/sparql/: log.h  sparqllexer.cpp  sparqllexer.h  sparqlparser.cpp  sparqlparser.h  sparqlplaner.cpp  sparqlplaner.h  utils.cpp  utils.h  valuefilter_impl.cpp  valuefilter_impl.h
src/test/: makefile  test  test.cpp
src/utils/: file_util.cpp  file_util.h  roaring.c  roaring.h  roaring.hh  sdsl_utils.h  tiny_log.hpp  union_find.hpp
test/: CMakeLists.txt  block_data_seeker_test  block_data_seeker_test.cpp  block_index_test  block_index_test.cpp  block_test  block_test.cpp  boost_test.cpp  clean.sh  debug  file_util_test.cpp  fish_db_test.cpp  iri_index_test  iri_index_test.cpp  makefile  message_test.cpp  query_client.cpp  query_test.cpp  roaring_test.cpp  root_table.cpp  root_table_test  root_table_test.cpp  sparql_test.cpp  test  test.cpp  test_basic.cpp  tiny_log_test  tiny_log_test.cpp  union_find_test.cpp
test/block_data_seeker_test.dSYM/Contents/: Info.plist
test/block_data_seeker_test.dSYM/Contents/Resources/DWARF/: block_data_seeker_test
test/block_index_test.dSYM/Contents/: Info.plist
test/block_index_test.dSYM/Contents/Resources/DWARF/: block_index_test
test/block_test.dSYM/Contents/: Info.plist
test/block_test.dSYM/Contents/Resources/DWARF/: block_test
test/data/: baseinfo.basic.one.spo  clean_df.py  test.spo  test.spo.bak
test/load_test/: CMakeLists.txt  query_client.cpp  session.hpp  test_query_str.h
test/root_table_test.dSYM/Contents/: Info.plist
test/root_table_test.dSYM/Contents/Resources/DWARF/: root_table_test
